# peruka-scraper

./: .gitignore  README.md  pyproject.toml
peruka_scraper/: __init__.py  cli.py  core.py
peruka_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_core.py
